--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
       "^4.13",
 
     "console-ultimate":
-      "^2.8"
+      "^2.8",
+
+    "rootpath":
+      "StreetStrider/rootpath#v1.4.0"
   },
 
   "devDependencies":
