--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "scripts":
   {
     "start": "node .",
+    "dev":   "nodemon --watch src/ .",
 
     "st": "eslint -c node_modules/js-outlander/outlander.eslint.js src/"
   },
@@ -33,6 +34,9 @@
       "^2.8",
 
     "js-outlander":
-      "StrangeTransistor/js-outlander#2.0.0"
+      "StrangeTransistor/js-outlander#2.0.0",
+
+    "nodemon":
+      "^1.9.1"
   }
 }
