DB: workon migration infrastructure.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "node .",
     "dev":   "nodemon --watch src/ .",
 
-    "st": "eslint -c node_modules/js-outlander/outlander.eslint.js src/",
+    "st": "eslint -c node_modules/js-outlander/outlander.eslint.js src/ db/",
 
     "knex": "knex --knexfile=db/knexfile.js --env=dev",
     "db-migrate":  "npm run knex -- migrate:latest",
