--- a/package.json
+++ b/package.json
@@ -34,6 +34,18 @@
     "body-parser":
       "^1.15.0",
 
+    "express-session":
+      "^1.13.0",
+
+    "passport":
+      "^0.3.2",
+
+    "passport-local":
+      "^1.0.0",
+
+    "promisify-node":
+      "^0.1.5",
+
     "lodash":
       "^4",
 
