--- a/package.json
+++ b/package.json
@@ -49,7 +49,13 @@
       "^2.8",
 
     "rootpath":
-      "StreetStrider/rootpath#v1.4.0"
+      "StreetStrider/rootpath#v1.4.0",
+
+    "js-yaml":
+      "^3.3.0",
+
+    "swagger-tools":
+      "0.9.*"
   },
 
   "devDependencies":
