--- a/api/swagger/FeedItem.yaml
+++ b/api/swagger/FeedItem.yaml
@@ -10,4 +10,9 @@ properties:
   investor:
     $ref: ./Investor.yaml
   event:
-    $ref: ./FeedEvent.yaml
+    type: object
+    description: One of Events
+    enum:
+    - $ref: ./TradeEvent.yaml
+    - $ref: ./WhatchlistEvent.yaml
+    - $ref: ./UpdateEvent.yaml
