Remove first_name and last_name, add full_name

--- a/api/swagger/User.yaml
+++ b/api/swagger/User.yaml
@@ -2,9 +2,7 @@ type: object
 properties:
   id:
     type: integer
-  first_name:
-    type: string
-  last_name:
+  full_name:
     type: string
   email:
     type: string
