swagger: start work on moving swagger to corresponding controllers, Feed.

--- a/src/http/api/feed/FeedItem.yaml
+++ b/src/http/api/feed/FeedItem.yaml
@@ -8,7 +8,7 @@ properties:
     format: date-time
     description: when event occurs
   investor:
-    $ref: ./Investor.yaml
+    $ref: ../Investor.yaml
   event:
     type: object
     description: One of Events
