--- a/src/http/api/feed/TradeEvent.yaml
+++ b/src/http/api/feed/TradeEvent.yaml
@@ -14,7 +14,7 @@ allOf:
           - sold
           - bought
         symbol:
-          $ref: ./Symbol.yaml
+          $ref: ../Symbol.yaml
         price:
           type: integer
           minimum: 0
