--- a/src/http/api/feed/UpdateEvent.yaml
+++ b/src/http/api/feed/UpdateEvent.yaml
@@ -10,6 +10,6 @@ allOf:
         stocks:
           type: array
           items:
-            $ref: ./Symbol.yaml
+            $ref: ../Symbol.yaml
         text:
           type: string
