fix: WHATchlist to WATCHlist.

--- a/src/http/api/feed/FeedItem.yaml
+++ b/src/http/api/feed/FeedItem.yaml
@@ -14,5 +14,5 @@ properties:
     description: One of Events
     enum:
     - $ref: ./TradeEvent.yaml
-    - $ref: ./WhatchlistEvent.yaml
+    - $ref: ./WatchlistEvent.yaml
     - $ref: ./UpdateEvent.yaml
