--- a/src/http/api/feed/WatchlistEvent.yaml
+++ b/src/http/api/feed/WatchlistEvent.yaml
@@ -1,5 +1,5 @@
 type: object
-description: '"Whatchlist" type of event'
+description: '"Watchlist" type of event'
 allOf:
 - $ref: ./Event.yaml
 - type: object
@@ -8,7 +8,7 @@ allOf:
       type: object
       properties:
         dir:
-          description: Type of whatchlist operation
+          description: Type of watchlist operation
           type: string
           enum:
           - added
