--- a/src/http/api/feed/WatchlistEvent.yaml
+++ b/src/http/api/feed/WatchlistEvent.yaml
@@ -14,7 +14,7 @@ allOf:
           - added
           - removed
         symbol:
-          $ref: ../Symbol.yaml
+          $ref: ../../swagger/Symbol.yaml
         text:
           type: string
         motivations:
