--- a/src/http/swagger/Symbol.yaml
+++ b/src/http/swagger/Symbol.yaml
@@ -1,3 +1,7 @@
+# note:
+# the more accurate term for this Type is "Security" (as a tradeable financial asset),
+# but for not to be mixed up with Informational Security
+# this is called Symbol
 type: object
 properties:
   ticker:
