--- a/api/swagger/TradeEvent.yaml
+++ b/api/swagger/TradeEvent.yaml
@@ -18,7 +18,7 @@ allOf:
         price:
           type: integer
           minimum: 0
-        amount::
+        amount:
           type: integer
           minimum: 0
         text:
