--- a/src/http/api/auth/Login.yaml
+++ b/src/http/api/auth/Login.yaml
@@ -29,12 +29,8 @@ post:
       description: user model
       schema:
         $ref: ../../swagger/User.yaml
-    403:
-      description: Errors of authentication.
-      schema:
-        $ref: ../../swagger/Error.yaml
-    404:
-      description: User not exists
+    400:
+      description: if something went wrong
       schema:
         $ref: ../../swagger/Error.yaml
   tags:
