--- a/package.json
+++ b/package.json
@@ -57,6 +57,9 @@
     "passport-local":
       "^1.0.0",
 
+    "passport-facebook-token":
+      "^3.2.0",
+
     "promisify-node":
       "^0.1.5",
 
