(NET-470) Update Swagger models of feed

--- a/src/http/api/feed/Event.yaml
+++ b/src/http/api/feed/Event.yaml
@@ -1,2 +1,11 @@
 type: object
-discriminator: eventType
+discriminator: type
+properties:
+  type:
+    type: string
+    enum:
+    - trade
+    - whatchlist
+    - update
+required:
+- type
