(NET-470) Fix style typos

--- a/src/http/api/auth/Register.yaml
+++ b/src/http/api/auth/Register.yaml
@@ -17,6 +17,7 @@ post:
           format: password
           description: Passweord
       required:
+      - full_name
       - email
       - password
   responses:
