--- a/src/http/api/auth/Register.yaml
+++ b/src/http/api/auth/Register.yaml
@@ -9,6 +9,9 @@ post:
     schema:
       type: object
       properties:
+        full_name:
+          type: string
+          description: Full Name of [Netvest User](https://weezlabs.atlassian.net/wiki/display/NET/User+Roles+-+The+Netvest+User)
         email:
           type: string
           description: Email
