(NET-470) Update swagger docs

--- a/src/http/api/auth/Register.yaml
+++ b/src/http/api/auth/Register.yaml
@@ -18,7 +18,7 @@ post:
         password:
           type: string
           format: password
-          description: Passweord
+          description: Password
       required:
       - full_name
       - email
