(NET-470) Add title for Update Type of Event. Update seed data.

--- a/src/http/api/feed/UpdateEvent.yaml
+++ b/src/http/api/feed/UpdateEvent.yaml
@@ -11,5 +11,7 @@ allOf:
           type: array
           items:
             $ref: ../../swagger/Symbol.yaml
+        title:
+          type: string
         text:
           type: string
