(NET-463) Update swagger docs for feed

--- a/src/http/api/feed/Feed.yaml
+++ b/src/http/api/feed/Feed.yaml
@@ -1,3 +1,13 @@
-type: array
-items:
-  $ref: ./FeedItem.yaml
+type: object
+properties:
+  feed:
+    type: array
+    items:
+    - $ref: ./FeedItem.yaml
+  investors:
+    type: array
+    items:
+    - $ref: ../../swagger/Investor.yaml
+required:
+- feed
+- investors
