--- a/package.json
+++ b/package.json
@@ -18,11 +18,7 @@
 
     "knex": "knex --knexfile=db/knexfile.js --env=dev",
     "db-migrate":  "npm run knex -- migrate:latest",
-    "db-rollback": "npm run knex -- migrate:rollback",
-
-    "swagger": "swagger-project edit",
-    "swagger-ver": "swagger-project verify",
-    "swagger-val": "swagger validate api/swagger/swagger.yaml"
+    "db-rollback": "npm run knex -- migrate:rollback"
   },
 
   "dependencies":
