--- a/src/http/api/feed/GetFeedComments.yaml
+++ b/src/http/api/feed/GetFeedComments.yaml
@@ -15,7 +15,7 @@ get:
       [twitter guide](https://dev.twitter.com/rest/public/timelines)
   - name: feed_id
     description: Post (Feed Item) id
-    in: query
+    in: path
     type: integer
     default: 1
     required: true
@@ -23,10 +23,11 @@ get:
     200:
       description: Post (Feed Item) comments
       schema:
-        $ref: ./Comments.yaml
+        $ref: ../comments/Comments.yaml
     400:
       description: if something went wrong
       schema:
         $ref: ../../swagger/Error.yaml
   tags:
   - comments
+  - feed
