--- a/src/http/api/auth/swag/Login.yaml
+++ b/src/http/api/auth/swag/Login.yaml
@@ -1,36 +1,35 @@
 post:
-  description: Creates new user of app [Netvest User](https://weezlabs.atlassian.net/wiki/display/NET/User+Roles+-+The+Netvest+User)
+  description: Authenticates user by email and password
   parameters:
   - name: payload
-    in: body
     description: |
-      JSON payload to log in.
+      JSON payload to register / signup.
       [Validations](https://weezlabs.atlassian.net/wiki/display/NET/Validations) will be applied
+    in: body
+    required: true
     schema:
       type: object
       properties:
-        full_name:
-          type: string
-          description: Full Name of [Netvest User](https://weezlabs.atlassian.net/wiki/display/NET/User+Roles+-+The+Netvest+User)
         email:
           type: string
           description: Email
+          default: seed.2@user.com
         password:
           type: string
-          format: password
           description: Password
+          format: password
+          default: '321321'
       required:
-      - full_name
       - email
       - password
   responses:
     200:
       description: user model
       schema:
-        $ref: ../../swagger/User.yaml
+        $ref: ../../../swagger/User.yaml
     400:
       description: if something went wrong
       schema:
-        $ref: ../../swagger/Error.yaml
+        $ref: ../../../swagger/Error.yaml
   tags:
   - auth
