--- a/src/http/api/comments/swag/GetPostComments.yaml
+++ b/src/http/api/comments/swag/GetPostComments.yaml
@@ -15,7 +15,7 @@ get:
       [twitter guide](https://dev.twitter.com/rest/public/timelines)
   - name: feed_id
     description: Post (Feed Item) id
-    in: path
+    in: query
     type: integer
     default: 1
     required: true
@@ -23,23 +23,16 @@ get:
     200:
       description: Post (Feed Item) comments
       schema:
-        $ref: ../comments/Comments.yaml
+        $ref: ./Comments.yaml
     400:
       description: if something went wrong
       schema:
-        $ref: ../../swagger/Error.yaml
+        $ref: ../../../swagger/Error.yaml
   tags:
   - comments
-  - feed
 post:
   description: Create comment for Post (Feed Item)
   parameters:
-  - name: feed_id
-    description: Post (Feed Item) id
-    in: path
-    type: integer
-    default: 1
-    required: true
   - name: payload
     description: JSON payload to create comment
     in: body
@@ -48,11 +41,16 @@ post:
       type: object
       title: Comment Payload
       properties:
+        feed_id:
+          type: integer
+          description: Post (Feed Item) Id
+          default: 1
         text:
           type: string
           description: text of comment
           default: Some comment from logged in user
       required:
+      - feed_id
       - text
   responses:
     200:
@@ -60,7 +58,6 @@ post:
     400:
       description: if something went wrong
       schema:
-        $ref: ../../swagger/Error.yaml
+        $ref: ../../../swagger/Error.yaml
   tags:
   - comments
-  - feed
