--- a/src/http/api/feed/swag/FeedById.yaml
+++ b/src/http/api/feed/swag/FeedById.yaml
@@ -14,6 +14,6 @@ get:
     400:
       description: Handled Error
       schema:
-        $ref: ../../swagger/Error.yaml
+        $ref: ../../../swagger/Error.yaml
   tags:
   - feed
