--- a/src/http/api/feed/swag/GetPostFeedComments.yaml
+++ b/src/http/api/feed/swag/GetPostFeedComments.yaml
@@ -15,7 +15,7 @@ get:
       [twitter guide](https://dev.twitter.com/rest/public/timelines)
   - name: feed_id
     description: Post (Feed Item) id
-    in: query
+    in: path
     type: integer
     default: 1
     required: true
@@ -23,16 +23,23 @@ get:
     200:
       description: Post (Feed Item) comments
       schema:
-        $ref: ./Comments.yaml
+        $ref: ../../comments/swag/Comments.yaml
     400:
       description: if something went wrong
       schema:
-        $ref: ../../swagger/Error.yaml
+        $ref: ../../../swagger/Error.yaml
   tags:
   - comments
+  - feed
 post:
   description: Create comment for Post (Feed Item)
   parameters:
+  - name: feed_id
+    description: Post (Feed Item) id
+    in: path
+    type: integer
+    default: 1
+    required: true
   - name: payload
     description: JSON payload to create comment
     in: body
@@ -41,16 +48,11 @@ post:
       type: object
       title: Comment Payload
       properties:
-        feed_id:
-          type: integer
-          description: Post (Feed Item) Id
-          default: 1
         text:
           type: string
           description: text of comment
           default: Some comment from logged in user
       required:
-      - feed_id
       - text
   responses:
     200:
@@ -58,6 +60,7 @@ post:
     400:
       description: if something went wrong
       schema:
-        $ref: ../../swagger/Error.yaml
+        $ref: ../../../swagger/Error.yaml
   tags:
   - comments
+  - feed
