--- a/src/http/api/comments/swag/Abuse.yaml
+++ b/src/http/api/comments/swag/Abuse.yaml
@@ -1,12 +1,20 @@
 post:
   description: Report comment (Comments Item)
   parameters:
-  - name: comment_id
-    in: query
-    type: integer
-    description: Post (Comments Item) id
+  - name: payload
+    in: body
+    description: JSON payload to abuse comment.
     required: true
-    default: 1
+    schema:
+      type: object
+      title: Abuse Payload
+      properties:
+        comment_id:
+          type: integer
+          description: Post (Feed Item) Id
+          default: 1
+      required:
+      - comment_id
   responses:
     200:
       description: Abuse successfully created
