(NET-544) fix swagger

--- a/src/http/api/comments/swag/Abuse.yaml
+++ b/src/http/api/comments/swag/Abuse.yaml
@@ -11,7 +11,7 @@ post:
       properties:
         comment_id:
           type: integer
-          description: Post (Feed Item) Id
+          description: Post (Comments Item) Id
           default: 1
       required:
       - comment_id
