[skip ci] fix swagger (is_abuse in comments)

--- a/src/http/api/comments/swag/Comment.yaml
+++ b/src/http/api/comments/swag/Comment.yaml
@@ -17,6 +17,9 @@ properties:
   full_name:
     type: string
     description: Comment author full name
+  is_abuse:
+    type: boolean
+    description: Condition abuse for comments
 required:
 - id
 - timestamp
