--- a/src/http/api/feed/swag/Feed.yaml
+++ b/src/http/api/feed/swag/Feed.yaml
@@ -7,7 +7,7 @@ properties:
   investors:
     type: array
     items:
-    - $ref: ../../../swagger/Investor.yaml
+    - $ref: ../../investors/swag/Investor.yaml
 required:
 - feed
 - investors
