--- a/src/http/api/investors/swag/GetInvestors.yaml
+++ b/src/http/api/investors/swag/GetInvestors.yaml
@@ -1,5 +1,7 @@
 get:
-  description: Get list of investors in alphabetical order
+  description: |
+    Get list of investors in ~~alphabetical order~~
+    (removed before migration to **first_name**, **last_name**)
   parameters:
   - name: max_id
     in: query
