--- a/src/http/api/admin/swag/Intro.yaml
+++ b/src/http/api/admin/swag/Intro.yaml
@@ -16,9 +16,7 @@ post:
     200:
       description: user promoted to admins
     400:
-      description: if something went wrong
-      schema:
-        $ref: ../../../swagger/Error.yaml
+      $ref: './400.yaml'
 
   tags:
   - admin
