Admin: fix intro route and improve swagger.

--- a/src/http/api/admin/swag/Intro.yaml
+++ b/src/http/api/admin/swag/Intro.yaml
@@ -4,6 +4,7 @@ post:
   - name: payload
     in: body
     schema:
+      title: Introduced User
       type: object
       properties:
         target_user_id:
