break event object into type and data in db

--- a/src/http/api/feed/swag/FeedItem.yaml
+++ b/src/http/api/feed/swag/FeedItem.yaml
@@ -17,6 +17,12 @@ properties:
       **optional**
       present at `/feed/:id` requests
     $ref: ../../investors/swag/Investor.yaml
+  event_type:
+    type: string
+    enum:
+    - trade
+    - whatchlist
+    - update
   event:
     description: |
       One of Events
@@ -33,3 +39,4 @@ required:
 - id
 - timestamp
 - event
+- event_type
