Revert "break event object into type and data in db"
This reverts commit b6924b3e1c5469c842e815c899e27a39edfb7c1d.

--- a/src/http/api/feed/swag/TradeEvent.yaml
+++ b/src/http/api/feed/swag/TradeEvent.yaml
@@ -1,29 +1,35 @@
 type: object
 description: '"Trade" type of event'
-properties:
-  dir:
-    description: Type of trade operation
-    type: string
-    enum:
-    - sold
-    - bought
-  symbol:
-    $ref: ../../../swagger/Symbol.yaml
-  price:
-    type: integer
-    minimum: 0
-  amount:
-    type: integer
-    minimum: 0
-  text:
-    type: string
-  risk:
-    type: string
-    enum:
-    - low
-    - medium
-    - hign
-  motivations:
-    type: array
-    items:
-      type: string
+allOf:
+- $ref: ./Event.yaml
+- type: object
+  properties:
+    data:
+      type: object
+      properties:
+        dir:
+          description: Type of trade operation
+          type: string
+          enum:
+          - sold
+          - bought
+        symbol:
+          $ref: ../../../swagger/Symbol.yaml
+        price:
+          type: integer
+          minimum: 0
+        amount:
+          type: integer
+          minimum: 0
+        text:
+          type: string
+        risk:
+          type: string
+          enum:
+          - low
+          - medium
+          - hign
+        motivations:
+          type: array
+          items:
+            type: string
