--- a/src/http/api/feed/swag/UpdateEvent.yaml
+++ b/src/http/api/feed/swag/UpdateEvent.yaml
@@ -1,11 +1,17 @@
 type: object
 description: '"Update" type of event'
-properties:
-  stocks:
-    type: array
-    items:
-      $ref: ../../../swagger/Symbol.yaml
-  title:
-    type: string
-  text:
-    type: string
+allOf:
+- $ref: ./Event.yaml
+- type: object
+  properties:
+    data:
+      type: object
+      properties:
+        stocks:
+          type: array
+          items:
+            $ref: ../../../swagger/Symbol.yaml
+        title:
+          type: string
+        text:
+          type: string
