remove swagger/Investor, change getInvestors.yaml description

--- a/src/http/api/investors/swag/GetInvestors.yaml
+++ b/src/http/api/investors/swag/GetInvestors.yaml
@@ -1,7 +1,6 @@
 get:
   description: |
-    Get list of investors in ~~alphabetical order~~
-    (removed before migration to **first_name**, **last_name**)
+    Get list of investors sorted by `last_name`
   parameters:
   - name: max_id
     in: query
