--- a/src/http/api/investors/swag/GetInvestors.yaml
+++ b/src/http/api/investors/swag/GetInvestors.yaml
@@ -1,20 +1,19 @@
 get:
   description: |
-    Get list of investors in ~~alphabetical order~~
-    (removed before migration to **first_name**, **last_name**)
+    Get list of investors in alphabetical order by **full_name** field
   parameters:
   - name: max_id
     in: query
     type: number
     description: |
-      Get feed items that are added before *max_id* (inclusive)
-      [twitter guide](https://dev.twitter.com/rest/public/timelines)
+      Get feed items that are added before *max_id* (inclusive) with applied sorting
+      [guide](https://weezlabs.atlassian.net/wiki/display/NET/pagination)
   - name: since_id
     in: query
     type: number
     description: |
-      Get feed items greater than *since_id* (non inclusive)
-      [twitter guide](https://dev.twitter.com/rest/public/timelines)
+      Get feed items greater than *since_id* (non inclusive) with applied sorting
+      [guide](https://weezlabs.atlassian.net/wiki/display/NET/pagination)
   responses:
     200:
       description: Investors list
