--- a/package.json
+++ b/package.json
@@ -59,6 +59,12 @@
     "passport-facebook-token":
       "^3.2.0",
 
+    "passport-http-bearer":
+      "^1.0.1",
+
+    "jsonwebtoken":
+      "^7.0.0",
+
     "moment":
       "^2.13",
 
