--- a/package.json
+++ b/package.json
@@ -44,8 +44,8 @@
     "cookie-parser":
       "^1.4.1",
 
-    "connect-busboy":
-      "^0.0.2",
+    "multer":
+      "^1.1.0",
 
     "express-session":
       "^1.13.0",
